2004-01-17  Damien McGinnes <mcginnes at netspeed dot com.au>
	* Mercator/Forest.cpp modified seeding in forest to use an array

2004-01-15  James Turner <james@worldforge.org>
    
	* Update XCode project : proper WFMath dependancy, and many more
	  tests, plus an aggregate target which builds all the tests.

2004-01-15  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/DepthShader.cpp, Mercator/Forest.cpp,
	  Mercator/Terrain.cpp: Make sure config.h and cmath are
	  being included as required.

2004-01-15  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp: Reduce probability of tree at given node
	  by factor of 10.

2004-01-13  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h, Mercator/Plant.h:
	  Add accessors for plant and forest properties. Implement
	  populating the forest with plants.

	* tests/testPlant.cpp: Add tests for new accessors.

	* tests/testForest.cpp: Add test for populating code.

2004-01-13  Al Riddoch  <alriddoch@zepler.org>

	* tests/testQRNG.cpp: Unit test to verify predictability of quasi
	  random number generator.

2004-01-13  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h,
	  Mercator/Plant.cpp, Mercator/Plant.h, tests/testPlant.cpp:
	  New classes for handling vegetation, including basics of
	  functionality, and unit tests.

2004-01-13  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/BasePoint.h, Mercator/BasePoint.cpp:
	  Move static float variable definition into cpp file
	  for strict C++ compliance.

2003-12-19  Al Riddoch  <alriddoch@zepler.org>

	* Remove Serial from rpm spec as it is not required, and messes up
	  deps.

2003-11-27  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.cpp: Use lrintf or equivalent for clean
	  fast float-int conversion.

2003-11-03 James Turner <james@worldforge.org>

	* Add ProjectBuilder project, Mercator builds with no
	  problems, but hasn't been tested.

2003-11-01  Al Riddoch  <alriddoch@zepler.org>
