@@ -5,6 +5,7 @@
 #include <Mercator/Terrain.h>
 #include <Mercator/Segment.h>
 #include <Mercator/Intersect.h>
+#include <Mercator/Forest.h>
 #include "util_timer.h"
 #include <iostream>
 
@@ -35,5 +36,30 @@ int main()
     time.stop();
     std::cout << "time per segment = "<< (time.interval()/1.0) << " ms" << std::endl;
  
+
+    Mercator::Forest forest(4249162ul);
+    forest.setArea(WFMath::AxisBox<2>(WFMath::Point<2>(-50, -50),
+                                      WFMath::Point<2>(50, 50)));
+    time.start();
+    for (int q=0;q<10;q++) {   
+        forest.populate();
+    }
+    time.stop();
+
+    std::cout << "time per 100x100 forest = "<< (time.interval()*100.0) << " ms" << std::endl;
+
+    forest.setArea(WFMath::AxisBox<2>(WFMath::Point<2>(-100, -100),
+                                      WFMath::Point<2>(100, 100)));
+    time.start();
+    for (int q=0;q<10;q++) {   
+        forest.populate();
+    }
+    time.stop();
+
+
+    std::cout << "time per 200x200 forest = "<< (time.interval()*100.0) << " ms" << std::endl;
+    
+    
+    
     return 0;
 }
